--- a/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
+++ b/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6" [ngClass]="(f['goingGym'].invalid &&
+                            <div class="col-lg-4 col-md-6" [ngClass]="(f['goingGym'].invalid &&
                             ((f['goingGym'].dirty ||
                             f['goingGym'].touched))) ||
                             (f['goingGym'].hasError('required')
@@ -298,10 +298,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6" [ngClass]="(f['goingGym'].invalid &&
-                            ((f['goingGym'].dirty ||
-                            f['goingGym'].touched))) ||
-                            (f['goingGym'].hasError('required')
+                            <div class="col-lg-4 col-md-6" [ngClass]="(f['loseOrGain'].invalid &&
+                            ((f['loseOrGain'].dirty ||
+                            f['loseOrGain'].touched))) ||
+                            (f['loseOrGain'].hasError('required')
                             &&
                             submitted)?'m-top':''">
                                 <div class="form-group radio-group"
@@ -343,6 +343,51 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-4 col-md-6" [ngClass]="(f['physicallyActive'].invalid &&
+                            ((f['physicallyActive'].dirty ||
+                            f['physicallyActive'].touched))) ||
+                            (f['physicallyActive'].hasError('required')
+                            &&
+                            submitted)?'m-top':''">
+                                <div class="form-group radio-group"
+                                    [ngClass]="(f['physicallyActive'].invalid &&
+                                    ((f['physicallyActive'].dirty ||
+                                    f['physicallyActive'].touched))) ||
+                                    (f['physicallyActive'].hasError('required')
+                                    &&
+                                    submitted)?'has-error m-top':''">
+                                    <label>Physically Active? <span class="required">*</span></label>
+                                    <div class="payment-box">
+                                        <div class="payment-method">
+                                            <p class="radio-group"
+                                                style="margin-bottom: 0;">
+                                                <input type="radio"
+                                                    id="Yes" value="Yes"
+                                                    formControlName="physicallyActive">
+                                                <label
+                                                    for="Yes">Yes</label>
+                                                <input type="radio"
+                                                    id="no" value="No"
+                                                    formControlName="physicallyActive">
+                                                <label
+                                                    for="no">No</label>
+                                            </p>
+                                            <span style="margin-bottom: 10px"
+                                                class="error-msg"
+                                                *ngIf="(f['physicallyActive'].hasError('required')
+                                                && f['physicallyActive'].touched) ||
+                                                (f['physicallyActive'].hasError('required')
+                                                &&
+                                                submitted)">
+                                                <i aria-hidden="true"
+                                                    class="fa
+                                                    fa-exclamation-triangle"></i>
+                                                Mention physically active or not.
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-6 col-md-6" [ngClass]="(f['goingGym'].invalid &&
                             ((f['goingGym'].dirty ||
                             f['goingGym'].touched))) ||
@@ -361,15 +406,15 @@
                                         <div class="payment-method">
                                             <p style="margin-bottom: 0;" class="radio-group">
                                                 <input type="radio"
-                                                    id="yes" value="Yes"
+                                                    id="yesgym" value="Yes"
                                                     formControlName="goingGym">
                                                 <label
-                                                    for="yes">Yes</label>
+                                                    for="yesgym">Yes</label>
                                                 <input type="radio"
-                                                    id="no" value="No"
+                                                    id="nogym" value="No"
                                                     formControlName="goingGym">
                                                 <label
-                                                    for="no">No</label>
+                                                    for="nogym">No</label>
                                             </p>
                                             <span style="margin-bottom:
                                             10px" class="error-msg"
@@ -439,7 +484,7 @@
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
-                                    <label>Any Medical Issue</label>
+                                    <label>Any Medical Issue/Taking any medicines?</label>
                                     <input formControlName="medicalIssue"
                                         type="text" class="form-control">
                                 </div>
