--- a/client/src/app/shared/components/ui-components/accordion/accordion-item/accordion-item.component.css
+++ b/client/src/app/shared/components/ui-components/accordion/accordion-item/accordion-item.component.css
@@ -6,7 +6,7 @@
     z-index: -1!important;
     left: 0;
     top: 0;
-    /* background-color: rgba(0, 0, 0, 0.8); */
+    background-color: rgba(0, 0, 0, 0.6);
     transition: all 0.3s ease-out;
 }
 
