--- a/client/src/app/modules/account-and-settings/components/orders/order/order.component.html
+++ b/client/src/app/modules/account-and-settings/components/orders/order/order.component.html
@@ -1,1 +1,26 @@
-<p>order works!</p>
+<div class="custom-order-backdrop" id="custom-order-backdrop" (click)="closeModal()">
+    
+</div>
+<div class="custom-order-modal" id="custom-order-modal">
+    <div >
+        <div class="user-area pt-100 pb-70" style="width: 100%">
+            <div class="container" >
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
+                        <div class="user-all-form">
+                            <div class="contact-form">
+                                <p class="model-text">You Order Details!</p>
+                                <app-inline-spinner *ngIf="isLoading"></app-inline-spinner>
+                                <div *ngIf="!isLoading">
+                                    <h3>{{ orderDetails?.planDetails.planPrice | currency : orderDetails?.planDetails['currency']:"symbol":'2.0'
+                                    }}</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<app-spinner *ngIf="isLoading"></app-spinner>
