added remeber me login

--- a/client/src/app/modules/register/components/user-login/user-login.component.html
+++ b/client/src/app/modules/register/components/user-login/user-login.component.html
@@ -48,7 +48,7 @@
                                 <div class="col-lg-12 form-condition">
                                     <div class="agree-label">
                                         <input type="checkbox"
-                                            id="chb1">
+                                            id="chb1" formControlName="remeberMe">
                                         <label for="chb1">
                                             Remember Me <a
                                                 class="forget"
