--- a/client/src/app/modules/root-common/components/home/home.component.html
+++ b/client/src/app/modules/root-common/components/home/home.component.html
@@ -107,7 +107,7 @@
 
 <app-appointment></app-appointment>
 
-<div class="testimonials-area ptb-100">
+<!-- <div class="testimonials-area ptb-100">
     <div class="container">
         <div class="testimonials-slider owl-carousel owl-theme">
             <div class="testimonials-item">
@@ -163,81 +163,10 @@
             </div>
         </div>
     </div>
-</div>
-
-
-
-
-<!-- <div class="blog-area pt-100 pb-70">
-    <div class="container">
-        <div class="section-title text-center">
-            <span>Latest News</span>
-            <h2>Latest Recipe From Blog</h2>
-        </div>
-        <div class="row pt-45">
-            <div class="col-lg-6">
-                <div class="blog-card">
-                    <div class="blog-img">
-                        <a >
-                            <img src="assets/images/blog/blog-img1.jpg" alt="Blog Images">
-                        </a>
-                        <div class="tag">
-                            <a >
-                                22 April, 2021
-                            </a>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <h3><a >7 Healthy & Simp,gluten free Cookie, Cake Recipes</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            dolore magna aliqua quis ipsum suspendisse ultrices.</p>
-                        <a  class="read-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="blog-side-content">
-                            <div class="blog-side-img blog-side1"></div>
-                            <div class="content">
-                                <span><i class="flaticon-calendar-1"></i> 22 April, 2021</span>
-                                <h3>
-                                    <a >How to Make Spigots in Easy 4 Steps</a>
-                                </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div class="blog-side-content">
-                            <div class="blog-side-img blog-side2"></div>
-                            <div class="content">
-                                <span><i class="flaticon-calendar-1"></i> 23 April, 2021</span>
-                                <h3>
-                                    <a >5 Easy Cooking Recipe Tips </a>
-                                </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div class="blog-side-content">
-                            <div class="blog-side-img blog-side3"></div>
-                            <div class="content">
-                                <span><i class="flaticon-calendar-1"></i> 24 April, 2021</span>
-                                <h3>
-                                    <a >How to Make Fit in Your Body</a>
-                                </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div> -->
+
+
+<!-- <app-latest-blogs></app-latest-blogs> -->
+
+
+
