--- a/client/src/app/modules/root-common/components/contact/contact.component.html
+++ b/client/src/app/modules/root-common/components/contact/contact.component.html
@@ -25,7 +25,7 @@
                             <div class="content">
                                 <i class='bx bx-phone-call'></i>
                                 <h3>Phone Number</h3>
-                                <a href="tel:+8245678924">+8245678924</a>
+                                <a [href]="'tel:'+phones[0]">{{ phones[0] }}</a>
                             </div>
                         </li>
                         <li>
@@ -33,7 +33,7 @@
                                 <i class='bx bxl-instagram'></i>
                                 <h3>Instagram</h3>
                                 <span><a
-                                        href="https://www.instagram.com/balancedyte/"
+                                        [href]="socialMediaLinks?.instagram"
                                         target="_blank">
                                         Balance Dyte Instagram profile
                                     </a></span>
@@ -44,7 +44,8 @@
                                 <i class='bx bx-message'></i>
                                 <h3>Contact Info</h3>
                                 <a
-                                    href="mailto:balancedyte@gmail.com">balancedyte@gmail.com</a>
+                                    [href]="'mailto:' + emails[0]">{{ emails[0]
+                                    }}</a>
                             </div>
                         </li>
                     </ul>
@@ -136,7 +137,8 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group"
-                                [ngClass]="(f['subject'].hasError('required') &&
+                                    [ngClass]="(f['subject'].hasError('required')
+                                    &&
                                     ((f['subject'].dirty ||
                                     f['subject'].touched))) ||
                                     ((f['subject'].hasError('minlength') &&
@@ -148,7 +150,7 @@
                                         id="msg_subject" class="form-control"
                                         required data-error="Please Enter Your
                                         Subject" placeholder="Your Subject*">
-                                        <div class="error-msg"
+                                    <div class="error-msg"
                                         *ngIf="(f['subject'].hasError('required')
                                         && f['subject'].touched) ||
                                         (f['subject'].hasError('required') &&
@@ -157,19 +159,21 @@
                                             fa-exclamation-triangle"></i> Please
                                         enter subject of your message.
                                     </div>
-                                        <div class="error-msg"
+                                    <div class="error-msg"
                                         *ngIf="(f['subject'].hasError('minlength')
                                         && f['subject'].touched) ||
                                         (f['subject'].hasError('minlength') &&
                                         submitted)">
                                         <i aria-hidden="true" class="fa
-                                            fa-exclamation-triangle"></i> Minimum 4 characters required.
+                                            fa-exclamation-triangle"></i>
+                                        Minimum 4 characters required.
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-12 col-md-12">
                                 <div class="form-group"
-                                [ngClass]="(f['message'].hasError('required') &&
+                                    [ngClass]="(f['message'].hasError('required')
+                                    &&
                                     ((f['message'].dirty ||
                                     f['message'].touched))) ||
                                     ((f['message'].hasError('minlength') &&
@@ -182,7 +186,7 @@
                                         cols="30" rows="5"
                                         data-error="Write your message"
                                         placeholder="Your Message*"></textarea>
-                                        <div class="error-msg"
+                                    <div class="error-msg"
                                         *ngIf="(f['message'].hasError('required')
                                         && f['message'].touched) ||
                                         (f['message'].hasError('required') &&
@@ -191,13 +195,14 @@
                                             fa-exclamation-triangle"></i> Please
                                         enter your message.
                                     </div>
-                                        <div class="error-msg"
+                                    <div class="error-msg"
                                         *ngIf="(f['message'].hasError('minlength')
                                         && f['message'].touched) ||
                                         (f['message'].hasError('minlength') &&
                                         submitted)">
                                         <i aria-hidden="true" class="fa
-                                            fa-exclamation-triangle"></i> Minimum 6 characters required.
+                                            fa-exclamation-triangle"></i>
+                                        Minimum 6 characters required.
                                     </div>
                                 </div>
                             </div>
