updated pricing plans

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,10 @@
 <main [@fade]="'active'">
   <app-header></app-header>
   <router-outlet></router-outlet>
+
+  <a href="https://api.whatsapp.com/send?phone=7696492843&text=Hi" target="_blank">
+        <img src="assets/images/logo/Whatsapp-logo-vector-png.png" class="md-raised md-primary" alt="whatsapp"
+            id="myBtn">
+    </a>
   <app-footer></app-footer>
 </main>
