--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -105,9 +105,9 @@
                                         </a>
                                         </li>
                                     <li class="nav-item mean-last">
-                                        <a routerLink="/terms-conditions"
+                                        <a routerLink="/testimonials"
                                         (click)="scrollTop()" routerLinkActive="active" class="nav-link">
-                                            Terms
+                                            Testimonials
                                         </a>
                                     </li>
                                     <li class="nav-item mean-last">
@@ -226,11 +226,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/terms-conditions"
+                                <a routerLink="/testimonials"
                                     (click)="scrollTop()"
                                     routerLinkActive="active"
                                     class="nav-link">
-                                    Terms
+                                    Testimonials
                                 </a>
                             </li>
                             <li class="nav-item">
