--- a/client/src/app/shared/components/resusable-components/card/card.component.html
+++ b/client/src/app/shared/components/resusable-components/card/card.component.html
@@ -1,1 +1,50 @@
-<p>card works!</p>
+<div class="work-area pb-70">
+    <div class="container">
+        <div class="section-title text-center">
+            <span>How IT Works</span>
+            <h2>4 Easy Steps For Happy Life</h2>
+        </div>
+        <div class="row pt-45 justify-content-center">
+            <div class="col-lg-3 col-sm-6">
+                <div class="work-card work-bg1">
+                    <div class="content">
+                        <i class="flaticon-contact-book"></i>
+                        <h3>Contact Us</h3>
+                        <p>Have feedback? Let us know how we can improve by emailing us at <strong><a href="mailto:balancedyte@gmail.com" style="color: white;">balancedyte@gmail.com</a></strong>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <div class="work-card work-bg2">
+                    <div class="content">
+                        <i class="flaticon-calendar-1"></i>
+                        <h3>Appointment</h3>
+                        <p>Let us help you reach your fitness goals with a tailored workout program that’s right for you.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <div class="work-card work-bg3">
+                    <div class="content">
+                        <i class="flaticon-research"></i>
+                        <h3>Analysis</h3>
+                        <p>How much weight do you have to lose? Do you have a specific goal in mind? Let’s chat about what your plan is
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <div class="work-card work-bg4">
+                    <div class="content">
+                        <i class="flaticon-happiness"></i>
+                        <h3>Happy Life</h3>
+                        <p>We are always on the mission to make your life better and we believe that happiness is a joyous feeling.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
