--- a/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
+++ b/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
@@ -558,7 +558,7 @@
         </form>
     </div>
 </section>
-<app-spinner *ngIf="isLoading"></app-spinner>
+<app-spinner *ngIf="isLoading || isLoadingPlans"></app-spinner>
 <div id="pop-model">
     <app-model [emailInputValue]="emailInputValue"></app-model>
 </div>
