--- a/client/src/app/modules/account-and-settings/components/orders/order/order.component.html
+++ b/client/src/app/modules/account-and-settings/components/orders/order/order.component.html
@@ -23,4 +23,4 @@
         </div>
     </div>
 </div>
-<app-spinner *ngIf="isLoading"></app-spinner>
+<!-- <app-spinner *ngIf="isLoading"></app-spinner> -->
