updated header and footer

--- a/client/src/app/modules/core/footer/footer.component.html
+++ b/client/src/app/modules/core/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer-area footer-area-bg">
     <div class="container">
-        <div class="footer-top pt-100 pb-70">
+        <div class="footer-top pt-50 pb-50">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="footer-widget">
@@ -13,24 +13,7 @@
                         <p style="max-width: 400px;">
                             Balance Dyte is the place for everything health related. Our experts make it easy to navigate scientifically proven weight loss, nutrition and wellbeing tips in a supportive environment.
                         </p>
-                        <ul class="social-link">
-                            <li>
-                                <a [href]="socialMediaLinks?.facebook" target="_blank">
-                                    <i class='bx bxl-facebook'></i>
-                                </a>
-                            </li>
-                           
-                            <li>
-                                <a [href]="socialMediaLinks?.twitter" target="_blank">
-                                    <i class='bx bxl-twitter'></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a [href]="socialMediaLinks?.instagram" target="_blank">
-                                    <i class='bx bxl-instagram'></i>
-                                </a>
-                            </li>
-                        </ul>
+                        
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
@@ -86,9 +69,29 @@
                                 </span>
                             </li>
                             <li>
-                                Follow on <a [href]="socialMediaLinks?.instagram" target="_blank">
-                                    Instagram
-                                </a> for more!
+                                Follow:
+                                <span>
+                                    <div >
+                                        <ul class="social-link">
+                                            <li>
+                                                <a [href]="socialMediaLinks?.facebook" target="_blank">
+                                                    <i class='bx bxl-facebook'></i>
+                                                </a>
+                                            </li>
+                                           
+                                            <li>
+                                                <a [href]="socialMediaLinks?.twitter" target="_blank">
+                                                    <i class='bx bxl-twitter'></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a [href]="socialMediaLinks?.instagram" target="_blank">
+                                                    <i class='bx bxl-instagram'></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </span>
                             </li>
                         </ul>
                     </div>
