--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -53,7 +53,9 @@
                         <app-accordion-item [mobileNav]="true">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                    <a routerLink="/about" routerLinkActive="active" (click)="scrollTop()"
+                                    <a routerLink="/about"
+                                        routerLinkActive="active"
+                                        (click)="scrollTop()"
                                         class="nav-link">
                                         About
                                         <i class="bx bx-chevron-down"></i>
@@ -66,7 +68,9 @@
                                             style="display: block;">
                                             <li class="nav-item">
                                                 <a routerLink="/account/profile"
-                                                routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="scrollTop()"
+                                                    routerLinkActive="active"
+                                                    [routerLinkActiveOptions]="{exact:
+                                                    true}" (click)="scrollTop()"
                                                     class="nav-link">
                                                     Profile
                                                 </a>
@@ -74,14 +78,16 @@
                                             <li class="nav-item">
                                                 <a
                                                     routerLink="/account/profile/orders"
-                                                    routerLinkActive="active" (click)="scrollTop()"
+                                                    routerLinkActive="active"
+                                                    (click)="scrollTop()"
                                                     class="nav-link">
                                                     My Orders
                                                 </a>
                                                 <li class="nav-item">
                                                     <a
                                                         routerLink="/account/settings/change-password"
-                                                        routerLinkActive="active" (click)="scrollTop()"
+                                                        routerLinkActive="active"
+                                                        (click)="scrollTop()"
                                                         class="nav-link">
                                                         Change Password
                                                     </a>
@@ -98,33 +104,45 @@
                                     </app-accordion>
 
                                     <li class="nav-item">
-                                        <a routerLink="/privacy-and-refund-policies"
-                                        (click)="scrollTop()" routerLinkActive="active" class="nav-link">
+                                        <a
+                                            routerLink="/privacy-and-refund-policies"
+                                            (click)="scrollTop()"
+                                            routerLinkActive="active"
+                                            class="nav-link">
                                             Privacy Policy
                                             <i class="bx bx-chevron-down"></i>
                                         </a>
-                                        </li>
+                                    </li>
                                     <li class="nav-item mean-last">
                                         <a routerLink="/testimonials"
-                                        (click)="scrollTop()" routerLinkActive="active" class="nav-link">
+                                            (click)="scrollTop()"
+                                            routerLinkActive="active"
+                                            class="nav-link">
                                             Testimonials
                                         </a>
                                     </li>
                                     <li class="nav-item mean-last">
                                         <a routerLink="/contact"
-                                        (click)="scrollTop()" routerLinkActive="active" class="nav-link">
+                                            (click)="scrollTop()"
+                                            routerLinkActive="active"
+                                            class="nav-link">
                                             Contact Us
                                         </a>
                                     </li>
-                                    <li *ngIf="!isLoggedIn()" class="nav-item mean-last">
+                                    <li *ngIf="!isLoggedIn()" class="nav-item
+                                        mean-last">
                                         <a routerLink="/user/login"
-                                        (click)="scrollTop()" routerLinkActive="active" class="nav-link">
+                                            (click)="scrollTop()"
+                                            routerLinkActive="active"
+                                            class="nav-link">
                                             Login
                                         </a>
                                     </li>
-                                    <li *ngIf="isLoggedIn()" class="nav-item mean-last">
+                                    <li *ngIf="isLoggedIn()" class="nav-item
+                                        mean-last">
                                         <a
-                                        (click)="onLogOut();scrollTop()" class="nav-link">
+                                            (click)="onLogOut();scrollTop()"
+                                            class="nav-link">
                                             Log out
                                         </a>
                                     </li>
@@ -179,6 +197,12 @@
                             
                         </li> -->
                             <li class="nav-item">
+                                <a routerLink="/" [routerLinkActiveOptions]="{exact:true}" (click)="scrollTop()"
+                                    routerLinkActive="active" class="nav-link">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a routerLink="about" (click)="scrollTop()"
                                     routerLinkActive="active" class="nav-link">
                                     About
@@ -206,7 +230,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link"
                                             routerLinkActive="active"
-                                            (click)="scrollTop()" 
+                                            (click)="scrollTop()"
                                             routerLink="/account/settings/change-password">Change
                                             Password</a>
                                     </li>
@@ -217,14 +241,6 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item">
-                                <a routerLink="/privacy-and-refund-policies"
-                                    (click)="scrollTop()"
-                                    routerLinkActive="active"
-                                    class="nav-link">
-                                    Privacy Policy
-                                </a>
-                            </li>
                             <li class="nav-item">
                                 <a routerLink="/testimonials"
                                     (click)="scrollTop()"
